// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDownloadObject when OS is "darwin" and arch is "arm" gets download object 1`] = `
{
  "binPath": "/var/folders/1/tmp/T",
  "dest": "/var/folders/1/tmp/T/cc-test-reporter",
  "url": "https://codeclimate.com/downloads/test-reporter/test-reporter-0.11.1-darwin-amd64",
}
`;

exports[`getDownloadObject when OS is "darwin" and arch is "arm64" gets download object 1`] = `
{
  "binPath": "/var/folders/1/tmp/T",
  "dest": "/var/folders/1/tmp/T/cc-test-reporter",
  "url": "https://codeclimate.com/downloads/test-reporter/test-reporter-0.11.1-darwin-arm64",
}
`;

exports[`getDownloadObject when OS is "darwin" and arch is "x32" gets download object 1`] = `
{
  "binPath": "/var/folders/1/tmp/T",
  "dest": "/var/folders/1/tmp/T/cc-test-reporter",
  "url": "https://codeclimate.com/downloads/test-reporter/test-reporter-0.11.1-darwin-amd64",
}
`;

exports[`getDownloadObject when OS is "darwin" and arch is "x64" gets download object 1`] = `
{
  "binPath": "/var/folders/1/tmp/T",
  "dest": "/var/folders/1/tmp/T/cc-test-reporter",
  "url": "https://codeclimate.com/downloads/test-reporter/test-reporter-0.11.1-darwin-amd64",
}
`;

exports[`getDownloadObject when OS is "linux" and arch is "arm" gets download object 1`] = `
{
  "binPath": "/var/folders/1/tmp/T",
  "dest": "/var/folders/1/tmp/T/cc-test-reporter",
  "url": "https://codeclimate.com/downloads/test-reporter/test-reporter-0.11.1-linux-amd64",
}
`;

exports[`getDownloadObject when OS is "linux" and arch is "arm64" gets download object 1`] = `
{
  "binPath": "/var/folders/1/tmp/T",
  "dest": "/var/folders/1/tmp/T/cc-test-reporter",
  "url": "https://codeclimate.com/downloads/test-reporter/test-reporter-0.11.1-linux-arm64",
}
`;

exports[`getDownloadObject when OS is "linux" and arch is "x32" gets download object 1`] = `
{
  "binPath": "/var/folders/1/tmp/T",
  "dest": "/var/folders/1/tmp/T/cc-test-reporter",
  "url": "https://codeclimate.com/downloads/test-reporter/test-reporter-0.11.1-linux-amd64",
}
`;

exports[`getDownloadObject when OS is "linux" and arch is "x64" gets download object 1`] = `
{
  "binPath": "/var/folders/1/tmp/T",
  "dest": "/var/folders/1/tmp/T/cc-test-reporter",
  "url": "https://codeclimate.com/downloads/test-reporter/test-reporter-0.11.1-linux-amd64",
}
`;

exports[`getDownloadObject when OS is "win32" and arch is "arm" gets download object 1`] = `
{
  "binPath": "/var/folders/1/tmp/T",
  "dest": "/var/folders/1/tmp/T/cc-test-reporter.exe",
  "url": "https://codeclimate.com/downloads/test-reporter/test-reporter-0.11.1-windows-amd64",
}
`;

exports[`getDownloadObject when OS is "win32" and arch is "arm64" gets download object 1`] = `
{
  "binPath": "/var/folders/1/tmp/T",
  "dest": "/var/folders/1/tmp/T/cc-test-reporter.exe",
  "url": "https://codeclimate.com/downloads/test-reporter/test-reporter-0.11.1-windows-arm64",
}
`;

exports[`getDownloadObject when OS is "win32" and arch is "x32" gets download object 1`] = `
{
  "binPath": "/var/folders/1/tmp/T",
  "dest": "/var/folders/1/tmp/T/cc-test-reporter.exe",
  "url": "https://codeclimate.com/downloads/test-reporter/test-reporter-0.11.1-windows-amd64",
}
`;

exports[`getDownloadObject when OS is "win32" and arch is "x64" gets download object 1`] = `
{
  "binPath": "/var/folders/1/tmp/T",
  "dest": "/var/folders/1/tmp/T/cc-test-reporter.exe",
  "url": "https://codeclimate.com/downloads/test-reporter/test-reporter-0.11.1-windows-amd64",
}
`;
